# my-openenv-RankRightEnv

./: README.md  openenv.yaml
backend/: .env  .gitignore  requirements.txt
backend/app/: api.py  env.py  inference.py  models.py  ranking.py  reward.py  user_simulator.py
backend/app/scenarios/: hard.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/explain/: page.tsx
frontend/app/metrics/: page.tsx
frontend/app/signals/: page.tsx
frontend/app/simulation/: page.tsx
frontend/components/: ActionLog.tsx  ActionPanel.tsx  AgentPanel.tsx  FeedPanel.tsx  NavBar.tsx  PolicyPanel.tsx  RewardPanel.tsx  SignalTable.tsx  SignalsPanel.tsx  SimulationHeader.tsx  StepControls.tsx  UserPanel.tsx  WeightsPanel.tsx
frontend/hooks/: useSimulation.ts
frontend/lib/: api.ts  mockData.ts  types.ts
rankright-env/: Dockerfile  README.md  requirements.txt
rankright-env-HF deployment/: Dockerfile  inference.py  openenv.yaml  pyproject.toml
rankright-env-HF deployment/app/: api.py  env.py  policy.py  ranking.py  scenario_loader.py  user_simulator.py
rankright-env-HF deployment/app/scenarios/: easy.json  medium.json
rankright-env-HF deployment/server/: app.py
rankright-env/app/: api.py  env.py  grader.py  models.py
