[project]
name = "rankright-env"
version = "0.1.0"
description = "Policy-aware recommendation OpenEnv environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"